Fixed issue #11323: Radio buttons at array questions are not aligned properly

--- a/templates/default/css/template.css
+++ b/templates/default/css/template.css
@@ -755,6 +755,11 @@ td.answer-item.text-center
     padding-left: 39px;
 }
 
+table.array-no-dropdown  td.answer-item.text-center
+{
+    padding-left: 45px;
+}
+
 .table-5-point-array td.answer-item.text-center
 {
     padding-left: 54px;
